--- a/Matrices-Heatmaps/main.ipynb
+++ b/Matrices-Heatmaps/main.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Matrices, Colours and Heatmaps\n",
+    "\n",
+    "Matrices can be visualised with heatmaps using `matplotlib`. Each index in the matrix is assigned a colour based on its value. A matrix's colourmap and interpolation can be changed, leading to many different looks, as below."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -147,7 +156,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Colour Maps\n",
+    "## Colour Maps\n",
     "\n",
     "The matrix can be plotted with different colour maps by changing the `cmap` attribute of `matplotlib.pyplot.imshow()`."
    ]
@@ -183,7 +192,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Interpolation\n",
+    "## Interpolation\n",
     "\n",
     "The matrix can be plotted with a different interpolation by changing the `interpolation` attribute of `matplotlib.pyplot.imshow()`."
    ]
